--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         // PHOTO WALL LOGIC
         const memories = [
-            { url: 'assets/20250817_160203.jpg', label: 'The Laughs' },
+            { url: 'assets/20250817_160203.jpg', label: 'Encounter with a beast' },
             { url: 'assets/20251004_180951.jpg', label: 'Kattan Chai Alliance Formation Day' },
             { url: 'assets/20250817_163225.jpg', label: 'Not really sure what she is doing here' },
             { url: 'assets/20250817_163545.jpg', label: 'The Crew' }
